# MAES

./: .gitignore  CONTRIBUTING.md  Dora.sln.DotSettings  README.md  maesconfig.yaml
.github/ISSUE_TEMPLATE/: bug-report-rosmode.md  bug-report-unitymode.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
Assets/: FogOfWar.cs  InitTestScene638489480375360375.unity  InitTestScene638489481037164411.unity  InitTestScene638489493172906214.unity  MinotaurDemo.cs  SimulationScene.unity  StatisticsUIController.cs  idk.unity  package.json
Assets/EditModeTests/: TestingTest.cs
Assets/EditTests/: CoverageCalculatorTests.cs  EditTests.asmdef  test.cs
Assets/Maps/: Blank_map.pgm  blank.pgm  blank_100.pgm  doorway.pgm  doorway_corner.pgm  doorway_hallway.pgm  hallway.pgm  hallway_rotate.pgm  single_wall.pgm
Assets/Materials/: AgedDarkWood_StandardShader.mat  Brick.mat  BrushedIron_WMShader.mat  CaveWalls.mat  CoarseConcrete_StandardShader.mat  CoarseConcrete_WMShader.mat  Concrete.mat  Debug.mat  ExplorationProgressMaterial.mat  GroundMaterial.mat  SimpleRedBricks_StandardShader.mat  TagPostRed.mat  Wood.mat
Assets/PlayModeTests/: CommunicationTest.cs  MaterialCommunicationTest.cs  MinotaurDoorwayTest.cs  PlayModeTestingTest.cs  PlayModeTests.asmdef  Robot2DControllerTest.cs  StandardTestingConfiguration.cs  TestingAlgorithm.cs
Assets/Prefabs/: DefaultVisualizationSuite.prefab  DoraRobot2D.prefab  ExplorationStats.prefab  ExplorationVisualizer.prefab  MaesRobot2D.prefab  MapGenerator.prefab  MonaRobot2.prefab  MonaRobotWithCollision.prefab  MonaRobot_2D.prefab  MonaRobot_Model.fbx  MonaRobot_PhysicsIntegrated.prefab  ROSClockPublisher.prefab  ROSPublisher.prefab  RobotSpawner.prefab  Simulation.prefab  Simulator.prefab  StopSign.fbx  TurtleBot3ManualConfig.prefab  UI Canvas.prefab  mona_robot_2.prefab
Assets/Prefabs/Materials/: Metal.mat
Assets/Resources/: FogMaterial.mat  LineRendererPrefab.prefab  MAES-icon.afdesign  MAES.prefab  ROSConnectionPrefab.prefab  TagPost.prefab  WorldMatFree.shader
Assets/RosMessages/: CustomRosMessages.asmdef
Assets/Scenes/: AvariceExperiments.unity  MainScene.unity  MinotaurExperiments.unity  SimulationScene.unity  TnfExperiments.unity  WallFollowerExperiment.unity  _old_MainScene.unity
Assets/Scenes/ExperimentSimulations/: greed_LOS_75.unity
Assets/Scripts/: AssemblyInfo.cs  AvariceExperiment.cs  AvariceExploratoryExperiment.cs  CameraController.cs  CommunicationManager.cs  CustomScriptsAssembly.asmdef  DebuggingVisualizer.cs  ExampleProgram.cs  GlobalSettings.cs  GreedExporatoryExperiment.cs  HenrikExample.cs  IRobotController.cs  ISavable.cs  ISimulationUnit.cs  MaesYamlConfigLoader.cs  MainViewMovementController.cs  MapGenerator.cs  MeshGenerator.cs  MinotaurExperiments.cs  Robot2DController.cs  RobotConstraints.cs  RobotController.cs  RobotForceController.cs  ScenarioGenerator.cs  Simulation.cs  SimulationConfiguration.cs  SimulationInfoUIController.cs  SimulationManager.cs  SimulationPlayState.cs  SimulationScenario.cs  SimulationSpeedController.cs  SimulationUnit.cs  Simulator.cs  SpeedController.cs  StatisticsUIController.cs  TnfExperiments.cs  UIMovementButton.cs  UIPanel.cs  Utils.cs  WallFollowerExperiment.cs
Assets/Scripts/ExperimentSimulations/: ExperimentBase.cs  MinotaurExperiments.cs  SceneToExperiments.cs  TimeoutTest.cs
Assets/Scripts/ExplorationAlgorithm/: BrickAndMortar.cs  BrickAndMortarTag.cs  CircleTestAlgorithm.cs  IExplorationAlgorithm.cs  MovementTestAlgorithm.cs  RandomExplorationAlgorithm.cs  Ros2Algorithm.cs
Assets/Scripts/Map/: CoarseGrainedMap.cs  EnvironmentTag.cs  EnvironmentTaggingMap.cs  RayTracingMap.cs  RobotSpawner.cs  SimulationMap.cs  SimulationMapTile.cs  SlamMap.cs  VisibleTag.cs  VisibleTagInfoHandler.cs  (+1 more)
Assets/maes-ros-slam-ws/src/unity_slam_example/: package.xml  setup.py
Assets/maes-ros-slam-ws/src/unity_slam_example/launch/: navigation_launch_maes.py  unity_slam_example.py
Assets/maes-ros-slam-ws/src/unity_slam_example/params/: nav2_params_maes.yaml
Assets/maes-ros-slam-ws/src/unity_slam_example/rviz/: nav2_unity.rviz
Assets/maes_ros2_ws/src/ros_tcp_endpoint/: package.xml
Docker/: Dockerfile  source_ros.sh  welcome_message
PerformanceTest/: perf.sh
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Statistics/: circle_data.xlsx
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
maes-csv-reader/: README.md  requirements.txt  run_exp.ps1  run_exp.sh  sort-files.sh
maes-csv-reader/src/: blegh.py  blerg.py  cactusplot.py  cli.py  csvreader.py  exporter.py  main.py  options.py  plot.py  plotter.py  table.py  utility.py
maes-ros-slam-ws/src/maes_msgs/: package.xml
maes-ros-slam-ws/src/maes_msgs/msg/: EnvironmentTag.msg  State.msg
maes-ros-slam-ws/src/maes_msgs/srv/: BroadcastToAll.srv
maes-ros-slam-ws/src/maes_ros2_interface/: maes_config.yaml  maes_config_complete.yaml  maes_config_ros_system_test.yaml  map.pgm  package.xml  setup.py
maes-ros-slam-ws/src/maes_ros2_interface/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
maes-ros-slam-ws/src/maes_ros2_interface/launch/: maes_bringup_launch.py  maes_ros2_multi_robot_launch.py  maes_slam_launch.py  rviz_launch.py
maes-ros-slam-ws/src/maes_ros2_interface/params/: maes_nav2_multirobot_params_robotn.yaml
maes-ros-slam-ws/src/maes_ros2_interface/rviz/: maes_nav2.rviz
(+234 files in other folders)
