<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maes_msgs</name>
  <version>1.0.0</version>
  <description>Messages used to interface with Maes simulator</description>
  <maintainer email="michele.albano@gmail.com">Michele Albano</maintainer>
  <maintainer email="philipholler94@gmail.com">Philip Holler</maintainer>
  <maintainer email="info@mza.dk">Malte Zoëga</maintainer>
  <maintainer email="magnjensen@gmail.com">Magnus Jensen</maintainer>
  <license>GPL 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
