<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maes_ros2_interface</name>
  <version>1.0.0</version>
  <description>Main entry point for MAES robot bring-up of multiple robots.</description>
  <maintainer email="michele.albano@gmail.com">Michele Albano</maintainer>
  <maintainer email="philipholler94@gmail.com">Philip Holler</maintainer>
  <maintainer email="info@mza.dk">Malte Zoëga</maintainer>
  <maintainer email="magnjensen@gmail.com">Magnus Jensen</maintainer>
  <license>GPL 3.0</license>

  <exec_depend>launch</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_voxel_grid</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
