<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_tcp_endpoint</name>
  <version>0.7.0</version>
  <description>ROS TCP Endpoint Unity Integration (ROS2 version)
  Acts as the bridge between Unity messages sent via TCP socket and ROS messages.
  </description>
  <maintainer email="unity-robotics@unity3d.com">Unity Robotics</maintainer>
  <license>Apache 2.0</license>
  
  <depend>action_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <exec_depend>maes_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
